--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.4.21"
+    },
+    "dependencies": {
+        "swiper": "^12.1.0"
     }
 }
